- FIX: Fixed dataset count on project stats. - ADD: Added missing permission check to projects endpoints. - DEL: Removed no longer required resources and endpoints. - CHG: Code cleanup with IntelliJ IDEA suggestions.