@@ -60,7 +60,7 @@ public class ClimateCategoricalResource extends ContextResource
 
 					procedure.execute(context.configuration());
 
-					ResourceUtils.exportToFile(bw, procedure.getResults().get(0), true, null);
+					ResourceUtils.exportToFile(bw, procedure.getResults().getFirst(), true, null);
 				}
 			}
 
