@@ -10,7 +10,6 @@ import jhi.germinate.server.resource.ContextResource;
 import jhi.germinate.server.util.*;
 import org.jooq.DSLContext;
 
-import java.io.IOException;
 import java.sql.*;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -27,7 +26,7 @@ public class InstitutionUnifierResource extends ContextResource
 	@Consumes(MediaType.APPLICATION_JSON)
 	@Produces(MediaType.APPLICATION_JSON)
 	public boolean postInstitutionUnifier(InstitutionUnificationRequest request)
-			throws SQLException, IOException
+			throws SQLException
 	{
 		if (request == null || request.getPreferredInstitutionId() == null || CollectionUtils.isEmpty(request.getInstitutionIds()))
 			throw new BadRequestException();
@@ -47,7 +46,7 @@ public class InstitutionUnifierResource extends ContextResource
 			List<Integer> otherIds = others.stream().map(Institutions::getId).collect(Collectors.toList());
 
 			// If there's no preferred one or the others are empty or the only other one is the preferred one, return
-			if (preferredId == null || CollectionUtils.isEmpty(otherIds) || (otherIds.size() == 1 && Objects.equals(otherIds.get(0), preferredId)))
+			if (preferredId == null || CollectionUtils.isEmpty(otherIds) || (otherIds.size() == 1 && Objects.equals(otherIds.getFirst(), preferredId)))
 				throw new BadRequestException();
 
 			context.update(GERMPLASMINSTITUTIONS).set(GERMPLASMINSTITUTIONS.INSTITUTION_ID, preferredId).where(GERMPLASMINSTITUTIONS.INSTITUTION_ID.in(otherIds)).execute();
